# rust-grpc-demo

./: Cargo.toml  README.md  build.rs  client.csr  my_ca.key  my_ca.srl  server.csr  server.ext  server.key  server.pem
proto/: say.proto
src/: client.rs  hello.rs  server.rs
